--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">Etch-A-Sketch</div>
     <div id="container">
         <div id="controlPanel">
-            <button> Click me</button>
+            <button id="eraser"> Eraser</button>
         </div>
 
 
