Add clear all button

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <div id="header">Etch-A-Sketch</div>
     <div id="container">
         <div id="controlPanel">
-            <button id="eraser"> Eraser</button>
+            <button id="clearAll">Clear All!</button>
+            <div class="slider"></div>
         </div>
 
 
 
-
+    
         <div id="squareContainer"></div>
 
     </div>
