--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     <div id="header">Etch-A-Sketch</div>
     <div id="container">
         <div id="controlPanel">
+            <div class="filler"></div>
             <button id="clearAll">Clear All!</button>
-            <div class="slider"></div>
+            <div id="sliderBanner">Grid Slider</div>
+            <input 
+                type="range" 
+                id="gridSlider" 
+                min="1" 
+                max="100"
+                value="16"
+                onchange="changeSize(this.value)"
+            />
+            <div class="filler"></div>
         </div>
 
 
