--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div id="header">Etch-A-Sketch</div>
     <div id="container">
         <div id="controlPanel">
+            
             <div class="filler"></div>
+            <button id="empty">Empty</button>
             <button id="clearAll">Clear All!</button>
             <div id="sliderBanner">Grid Slider</div>
             <input 
@@ -21,8 +23,7 @@
                 min="1" 
                 max="100"
                 value="16"
-                onchange="changeSize(this.value)"
-            />
+                onchange="changeSize(this.value)"/>
             <div class="filler"></div>
         </div>
 
